k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scw-test
  name: scw-test
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: scw-test
